k8s.bugfixes.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: k8s-blog
  name: blog-bugfixes-ingress
  annotations:
    cert-manager.io/cluster-issuer: acme-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    k8s-app: blog
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.bugfixes.dev
        - bugfixes.dev
      secretName: blog-bugfixes-tls
  rules:
      - host: bugfixes.dev
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: blog
                  port:
                    number: 80
      - host: www.bugfixes.dev
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: blog
                  port:
                    number: 80
