k8s.chewedfeed.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: k8s-blog
  name: blog-chewedfeed-ingress
  annotations:
    cert-manager.io/cluster-issuer: acme-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    k8s-app: blog
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.chewedfeed.com
        - chewedfeed.com
      secretName: blog-chewedfeed-tls
  rules:
      - host: chewedfeed.com
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: blog
                  port:
                    number: 80
      - host: www.chewedfeed.com
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: blog
                  port:
                    number: 80
