k8s.k8sdeploy.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: k8s-blog
  name: blog-k8sdeploy-ingress
  annotations:
    cert-manager.io/cluster-issuer: acme-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    k8s-app: blog
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.k8sdeploy.dev
        - api.k8sdeploy.dev
        - k8sdeploy.dev
      secretName: blog-k8sdeploy-tls
  rules:
      - host: k8sdeploy.dev
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: blog
                  port:
                    number: 80
      - host: www.k8sdeploy.dev
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: blog
                  port:
                    number: 80
      - host: api.k8sdeploy.dev
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: blog
                  port:
                    number: 80
